--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Idea files
+*.iml
+.idea
+
 # Compiled class file
 *.class
 
@@ -9,8 +13,6 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
-/target/
 
 # Package Files #
 *.jar
