--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 connection.url=jdbc:postgresql://localhost:5432/task_manager
-connection.username=
-connection.password=
+connection.username=os
+connection.password=password
 connection.driver=org.postgresql.Driver
