--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-connection.url=jdbc:postgresql://localhost:5432/task_manager
-connection.username=os
-connection.password=password
+connection.url=jdbc:postgresql://192.168.31.2:5432/time_tracker
+connection.username=postgres
+connection.password=postgres
 connection.driver=org.postgresql.Driver
