--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -2,3 +2,5 @@ connection.url=jdbc:postgresql://192.168.31.2:5432/time_tracker
 connection.username=postgres
 connection.password=postgres
 connection.driver=org.postgresql.Driver
+
+properties.source.resources=true
