--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
             <version>1.6.2</version>
         </dependency>
 
-
+        <!-- пакеты для pdf -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.10</version>
+        </dependency>
         <dependency>
             <groupId>org.glassfish.web</groupId>
             <artifactId>jakarta.servlet.jsp.jstl</artifactId>
