Added pom dependency to generate password hash + added SchedulerUtils

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <version>3.11.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.15</version>
+        </dependency>
     </dependencies>
 
 
