--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,4 +1,4 @@
-email.to=lipilov.wm@gmail.com
+email.to=yurashmorgun@gmail.com
 email.from=greenteamjavaintensive7
 email.host=smtp.gmail.com
 pass.user_name=greenteamjavaintensive7
