--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,4 +1,4 @@
-email.to=yurashmorgun@gmail.com
+email.to=mihantoff@yandex.ru
 email.from=greenteamjavaintensive7
 email.host=smtp.gmail.com
 pass.user_name=greenteamjavaintensive7
