+ added Action layer + one servlet (other servlets removed) + added new jsp-files

--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,4 +1,4 @@
-email.to=yurashmorgun@gmail.com
+email.to=rogachev7@gmail.com
 email.from=greenteamjavaintensive7
 email.host=smtp.gmail.com
 pass.user_name=greenteamjavaintensive7
