--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-connection.url=jdbc:postgresql://192.168.31.2:5432/time_tracker
+connection.url=jdbc:postgresql://localhost:5432/TaskManager
 connection.username=postgres
-connection.password=postgres
+connection.password=admin
 connection.driver=org.postgresql.Driver
